# details-app

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-alpine  Dockerfilebad  Pipfile  details_nginx.conf  docker-compose.yml  kuber_create_service.yaml  kuber_deploy.yaml  pyproject.toml  start_gunicorn.sh
