[project]
name = "details-app"
version = "0.1.0"
description = "details-app"
authors = [
    {name = "Dmitri Donskoy",email = "crooper22@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
